# src/main.rs
@@ -121,6 +121,10 @@ async fn main() {
                 .with_state(pool.clone()),
         )
         .route(
+            "/api/v1/hosts/:id/approve",
+            post(host::approve_one_host_api).with_state(pool.clone()),
+        )
+        .route(
             "/api/v1/hosts/:id",
             get(host::get_one_host_api)
                 .patch(host::update_one_host_api)
